--- a/frontend/src/css/DateChooser.css
+++ b/frontend/src/css/DateChooser.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+.date-chooser > p {
+  text-align: center;
+}
+
 /* Avoid Popper CSS issue: https://github.com/Hacker0x01/react-datepicker/issues/3009 */
 .react-datepicker-popper[data-placement^="bottom"] {
   margin-top: 0 !important;
