--- a/frontend/src/css/HeaderPanel.css
+++ b/frontend/src/css/HeaderPanel.css
@@ -1,4 +1,9 @@
-.photo {
-  height: 60px;
-  width: 180px;
-}
+.turing_logo {
+      height: 45px;
+      width: 106px;
+ }
+
+.lida_logo {
+      height: 45px;
+      width: 106px;
+ }
