we only need one logo configuration #119

--- a/frontend/src/css/HeaderPanel.css
+++ b/frontend/src/css/HeaderPanel.css
@@ -1,9 +1,4 @@
-.turing_logo {
-  height: 45px;
-  width: 106px;
-}
-
-.lida_logo {
-  height: 45px;
-  width: 106px;
-}
+.logo {
+      height: 45px;
+      width: 106px;
+ }
