--- a/frontend/src/css/HeaderPanel.module.css
+++ b/frontend/src/css/HeaderPanel.module.css
@@ -1,10 +1,4 @@
-.hp-contents-centered-vertical {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.hp-row-logo {
+.row_logo {
   padding-top: 10px;
   padding-bottom: 10px;
 }
