--- a/frontend/src/css/Loading.module.css
+++ b/frontend/src/css/Loading.module.css
@@ -1,6 +1,6 @@
 .spinners {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
 }
