--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -6,7 +6,15 @@ html {
 
 /* Add responsive text sizes */
 @media (max-width: 576px) {
-  #bootstrap-overrides { font-size: calc(0.25 * (100% + 1vw + 1vh)); }
-  #bootstrap-overrides .btn { font-size: calc(0.25 * (100% + 1vw + 1vh)); }
-  #bootstrap-overrides .h5 { font-size: calc(1.25 * 0.25 * (100% + 1vw + 1vh)); }
+  #bootstrap-overrides { font-size: calc(0.22 * (100% + 1vw + 1vh)); }
+  #bootstrap-overrides .btn { font-size: calc(0.22 * (100% + 1vw + 1vh)); }
+  #bootstrap-overrides .card-body { padding: 0; }
+  #bootstrap-overrides .h5 { font-size: calc(1.5 * 0.22 * (100% + 1vw + 1vh)); }
+  #bootstrap-overrides .recharts-text { font-size: calc(0.75 * 0.22 * (100% + 1vw + 1vh)); }
+  #bootstrap-overrides .recharts-label { font-size: calc(0.75 * 0.22 * (100% + 1vw + 1vh)); }
+}
+
+#bootstrap-overrides .col-3 .col-6 {
+  background-color: lightcyan;
+  outline: 1px solid gray;
 }
